2014-10-21  Jérôme Pasquier  <rainbru@free.fr>

	* medias/*/Makefile.am: added datafiles to tarball.
	* configure.ac (AC_OUTPUT): added medias/*Makefile generation.

2014-10-01  Jérôme Pasquier  <rainbru@free.fr>

	* src/GameEngine.cpp (run): added loading bar.
	* src/GameEngine.cpp (run): CEGUI window appears.

	* src/GameEngine.cpp (GameEngine): handles CEGUI initialization.

	* src/GameEngine.hpp: fully implements OIS mouse and keyboard
	event callbacks.

	* src/GameEngine.cpp (windowClosed): correctly destroy OIS input
	objets when render window's closed.
	* src/GameEngine.hpp: now inherits Ogre::WindowEventListener.

	* configure.ac: switch CEGUI 0.8 (pkg module called CEGUI-0).

2014-09-18  Jérôme Pasquier  <rainbru@free.fr>

	* src/GameEngine.cpp (GameEngine) : correctly initialize OIS with
	exception handling.

	* configure.ac: PKG_CHECK_MODULES needs OIS >= 1.4.

2014-09-17  Jérôme Pasquier  <rainbru@free.fr>

	* src/GameEnginer.cpp (setupResources): take an extra argument
	which lad only the named section.

	* client.texi: renamed from client.texinfo.

2014-09-13  Jérôme Pasquier  <rainbru@free.fr>

	* configure.ac: renamed from configure.in and modernized automake
	init.

2013-04-19  Jérôme Pasquier  <rainbru@free.fr>

	* src/plugins.cfg: fix path to plugins to make the window open.

2013-01-07  Jérôme Pasquier  <rainbru@free.fr>

	* uses src/main.cpp (main): uses rainbrurpg-logger.

2012-01-06  Jérôme Pasquier  <rainbru@free.fr>

	* src/GameEngine.cpp (): add FrameListener and Viewport.

2012-01-04  Jérôme Pasquier  <rainbru@free.fr>

	* root: remove some unneeded autoproject-generated files.

	* configure.in: change name for previous modification.
	* root: move some files from rpg.* to client.*.

2011-10-02  Jérôme Pasquier  <rainbru@free.fr>

	* rpg: initial version.
