@@ -3,3 +3,5 @@ SUBDIRS=src media
 EXTRA_DIST=configure
 
 info_TEXINFOS=client.texi
+
+ACLOCAL_AMFLAGS = -I m4
