@@ -32,6 +32,7 @@
      in src/tools, with needed api modules preloaded to be
      able to test for guile an interactive way.
 **** TODO first version
+     CLOCK: [2015-06-19 ven. 13:21]--[2015-06-19 ven. 13:32] =>  0:11
      CLOCK: [2015-01-23 ven. 10:59]--[2015-01-23 ven. 11:29] =>  0:30
      CLOCK: [2014-10-21 mar. 18:03]--[2014-10-21 mar. 18:26] =>  0:23
      CLOCK: [2014-09-01 lun. 17:00]--[2014-09-01 lun. 17:38] =>  0:38
@@ -61,6 +62,7 @@
 - [X] Add media to the distribution
 - [X] Update GNU headers date for 2015 
   Using =sed -i -e "s/2011-2012, 2014/2011-2012, 2014-2015/g"=
+- [X] configure should search for Boost.Program_options
 - [ ] Handle interaction in menu layout (maybe another gamestate)
 - [ ] Window must be resizable and exitable
 - [ ] Must hide the system mouse cursor
